--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@nelreina/redis-event-stream-app",
   "version": "1.0.0",
   "main": "src/index.js",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "nodemon --watch src src/index",
