--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@nelreina/redis-stream-consumer": "^2.1.3",
+    "@nelreina/redis-stream-consumer": "^2.1.4",
+    "@nelreina/rest-client": "^1.4.0",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "pino": "^7.11.0",
