--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "@nelreina/redis-stream-consumer": "^2.1.3",
     "@nelreina/redis-stream-consumer": "^2.1.4",
-    "@nelreina/rest-client": "^1.4.0",
+    "@nelreina/rest-client": "^2.12.0",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "pino": "^7.11.0",
     "pino-pretty": "^7.6.1",
+    "pocketbase": "^0.8.1",
     "redis": "^4.0.6"
   }
 }
