--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nelreina/redis-stream-consumer": "^2.1.4",
     "@nelreina/rest-client": "^2.12.0",
     "dotenv": "^16.0.0",
+    "eventsource": "^2.0.2",
     "lodash": "^4.17.21",
     "pino": "^7.11.0",
     "pino-pretty": "^7.6.1",
