--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
   "dependencies": {
     "@nelreina/redis-stream-consumer": "^2.1.4",
     "@nelreina/rest-client": "^2.15.0",
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "eventsource": "^2.0.2",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "minimist": "^1.2.7",
     "pino": "^7.11.0",
     "pino-pretty": "^7.6.1",
     "pocketbase": "0.8.0",
-    "redis": "^4.0.6"
+    "redis": "^4.0.6",
+    "uuid": "^9.0.1"
   }
 }
