--- a/package.json
+++ b/package.json
@@ -5,14 +5,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch src src/index",
     "build": ". docker-build.sh",
     "start": "node src/index"
   },
   "license": "MIT",
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
   "dependencies": {
     "@nelreina/redis-stream-consumer": "^2.1.4",
     "@nelreina/rest-client": "^2.15.0",
@@ -28,7 +24,7 @@
     "minimist": "^1.2.7",
     "pino": "^7.11.0",
     "pino-pretty": "^7.6.1",
-    "pocketbase": "0.8.0",
+    "pocketbase": "^0.19.0",
     "redis": "^4.0.6",
     "uuid": "^9.0.1"
   }
